log/build_2025-06-12_20-40-53/tello_control/stdout_stderr.log
running egg_info
writing ../../build/tello_control/tello_control.egg-info/PKG-INFO
writing dependency_links to ../../build/tello_control/tello_control.egg-info/dependency_links.txt
writing entry points to ../../build/tello_control/tello_control.egg-info/entry_points.txt
writing requirements to ../../build/tello_control/tello_control.egg-info/requires.txt
writing top-level names to ../../build/tello_control/tello_control.egg-info/top_level.txt
reading manifest file '../../build/tello_control/tello_control.egg-info/SOURCES.txt'
writing manifest file '../../build/tello_control/tello_control.egg-info/SOURCES.txt'
running build
running build_py
copying tello_control/teleop_keyboard.py -> /root/tello_ros_ws/build/tello_control/build/lib/tello_control
running install
running install_lib
copying /root/tello_ros_ws/build/tello_control/build/lib/tello_control/teleop_keyboard.py -> /root/tello_ros_ws/install/tello_control/lib/python3.8/site-packages/tello_control
byte-compiling /root/tello_ros_ws/install/tello_control/lib/python3.8/site-packages/tello_control/teleop_keyboard.py to teleop_keyboard.cpython-38.pyc
  File "/root/tello_ros_ws/install/tello_control/lib/python3.8/site-packages/tello_control/teleop_keyboard.py", line 44
    't' = 'takeoff',
        ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/root/tello_ros_ws/install/tello_control/lib/python3.8/site-packages/tello_control-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/tello_control/tello_control.egg-info to /root/tello_ros_ws/install/tello_control/lib/python3.8/site-packages/tello_control-0.0.0-py3.8.egg-info
running install_scripts
Installing teleop_keyboard_node script to /root/tello_ros_ws/install/tello_control/lib/tello_control
writing list of installed files to '/root/tello_ros_ws/build/tello_control/install.log'
